2010-08-31  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/test/test_feedback.c (test_setfeedback): 
	Added return 0 at the end of the function body

	* libxnee/test/test_all.c (test_all): 
	Added return 0 at the end of the function body

	* libxnee/test/libtest.c (test_xnee_data): 
	Added return XNEE_OK at the end
	Added (c) and license notice

	* gnee/src/gnee_xnee.c (gnee_get_grab): 
	Added missing return values

	* cnee/src/main.c (cnee_handle_err): 
	function now returns void 
	we will discard any errors in the function anyway

	* devel-scripts/setup-xi2.sh: 
	Script to setup and unsetup (-d) xinput devices

	* libxnee/src/Makefile.am:
	Merged xinput-2 branch

	* libxnee/src/xnee.c:
	Removed funs: xnee_check_true, xnee_check_false

	* libxnee/src/xnee_display.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_error.c: 
	Updated (c) years to include 2010
	New error code: XNEE_CLI_ERROR

	* libxnee/src/xnee_expr.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_fake.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_range.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_replay.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_session.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_utils.c (xnee_check_true): 
	New funs: xnee_check_true, xnee_check_false

	* libxnee/src/xnee_strings.c: 
	Updated (c) years to include 2010
	Added string containing name of xinput extension

	* libxnee/src/xnee_record.c (xnee_unsetup_recording): 
	Merged xinput-2 branch

	* libxnee/include/libxnee/xnee.h (struct): 
	Merged xinput-2 branch

2010-08-31  Henrik Sandklef  <hesa@sandklef.com>

	BRANCH: xinput-2 branch

	* cnee/src/parse.c: 
	* cnee/include/parse.h: 
	Updated (c) years to include 2010
	Added option   "--disable-xinput-events"

	* libxnee/src/Makefile.am: 
	Added files: src/xnee_xinput.c include/libxnee/xnee_xinput.c 

	* libxnee/src/xnee_expr.c: 
	Added support for managing xinput events	
	Updated (c) years to include 2010

	* libxnee/src/xnee_fake.c: 